# PLC-Scraper

./: .gitignore  plc_urls.csv  plcs_to_scrape.csv  pyproject.toml
src/: plc-scraper.py
src/config/: __init__.py  constants.py
src/embedding/: embed.py  embed_plc.py
src/newprocessed/: chunks.csv  scraped.csv
src/s3/: __init__.py
src/text_splitter/: chunk_page.py  html_splitter.py  recursive_splitter.py  translator.py
src/utils/: scraper_utils.py
